2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(removeDomainMarker(Marker)): New method,
	(removeDomainMarker(Marker, Layer)): Likewise,
	(removeDomainMarker(int, Marker, Layer)): Likewise,
	(removeRangeMarker(Marker)): New method,
	(removeRangeMarker(Marker, Layer)): Likewise,
	(removeRangeMarker(int, Marker, Layer)): Likewise.
	
2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CategoryPlot.java
	(removeDomainMarker(Marker)): New method,
	(removeDomainMarker(Marker, Layer)): Likewise,
	(removeDomainMarker(int, Marker, Layer)): Likewise,
	(removeRangeMarker(Marker)): New method,
	(removeRangeMarker(Marker, Layer)): Likewise,
	(removeRangeMarker(int, Marker, Layer)): Likewise.

2007-10-31  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/ComparableObjectSeries.java
	(hashCode): Faster implementation,
	* source/org/jfree/data/time/TimeSeries.java
	(hashCode): Likewise,
	* source/org/jfree/data/xy/XYSeriesTests.java
	(hashCode): Likewise.
	
2007-10-29  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/dial/SimpleDialFrame.java: 
	Renamed StandardDialFrame.java.
	
2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java
	(drawPrimaryLineAsPath): Check for duplicated control points,
	(ControlPoint.equals): New method override.

2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CategoryPlot.java
	(getDomainAxisIndex): Added argument check,
	(getRangeAxisIndex): Likewise.
	
2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/StandardTickUnitSource.java:
	Implemented Serializable,
	(StandardTickUnitSource): Added explicit constructor,
	(equals): New method override,
	(hashCode): Likewise.
	