@@ -46,15 +46,23 @@
  * 10-Jul-2006 : Added dotWidth and dotHeight attributes (DG);
  * 06-Feb-2007 : Fixed bug 1086307, crosshairs with multiple axes (DG)
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
+ * 09-Nov-2007 : Added legend shape attribute, plus override for 
+ *               getLegendItem() (DG);
  *
  */
 
 package org.jfree.chart.renderer.xy;
 
 import java.awt.Graphics2D;
+import java.awt.Paint;
+import java.awt.Shape;
 import java.awt.geom.Rectangle2D;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
 import java.io.Serializable;
 
+import org.jfree.chart.LegendItem;
 import org.jfree.chart.axis.ValueAxis;
 import org.jfree.chart.event.RendererChangeEvent;
 import org.jfree.chart.plot.CrosshairState;
@@ -63,6 +71,8 @@ import org.jfree.chart.plot.PlotRenderingInfo;
 import org.jfree.chart.plot.XYPlot;
 import org.jfree.chart.util.PublicCloneable;
 import org.jfree.chart.util.RectangleEdge;
+import org.jfree.chart.util.SerialUtilities;
+import org.jfree.chart.util.ShapeUtilities;
 import org.jfree.data.xy.XYDataset;
 
 /**
@@ -83,6 +93,13 @@ public class XYDotRenderer extends AbstractXYItemRenderer
     /** The dot height. */
     private int dotHeight;
     
+    /** 
+     * The shape that is used to represent an item in the legend. 
+     * 
+     * @since 1.0.7
+     */
+    private transient Shape legendShape;
+
     /**
      * Constructs a new renderer.
      */
@@ -90,6 +107,7 @@ public class XYDotRenderer extends AbstractXYItemRenderer
         super();
         this.dotWidth = 1;
         this.dotHeight = 1;
+        this.legendShape = new Rectangle2D.Double(-3.0, -3.0, 6.0, 6.0);
     }
 
     /**
@@ -155,6 +173,37 @@ public class XYDotRenderer extends AbstractXYItemRenderer
     }
     
     /**
+     * Returns the shape used to represent an item in the legend.
+     * 
+     * @return The legend shape (never <code>null</code>).
+     * 
+     * @see #setLegendShape(Shape)
+     * 
+     * @since 1.0.7
+     */
+    public Shape getLegendShape() {
+        return this.legendShape;   
+    }
+    
+    /**
+     * Sets the shape used as a line in each legend item and sends a 
+     * {@link RendererChangeEvent} to all registered listeners.
+     * 
+     * @param shape  the shape (<code>null</code> not permitted).
+     * 
+     * @see #getLegendShape()
+     * 
+     * @since 1.0.7
+     */
+    public void setLegendShape(Shape shape) {
+        if (shape == null) {
+            throw new IllegalArgumentException("Null 'shape' argument.");   
+        }
+        this.legendShape = shape;
+        notifyListeners(new RendererChangeEvent(this));
+    }
+
+    /**
      * Draws the visual representation of a single data item.
      *
      * @param g2  the graphics device.
@@ -218,6 +267,56 @@ public class XYDotRenderer extends AbstractXYItemRenderer
     }
 
     /**
+     * Returns a legend item for the specified series.
+     *
+     * @param datasetIndex  the dataset index (zero-based).
+     * @param series  the series index (zero-based).
+     *
+     * @return A legend item for the series (possibly <code>null</code>).
+     */
+    public LegendItem getLegendItem(int datasetIndex, int series) {
+
+        // if the renderer isn't assigned to a plot, then we don't have a
+        // dataset...
+        XYPlot plot = getPlot();
+        if (plot == null) {
+            return null;
+        }
+
+        XYDataset dataset = plot.getDataset(datasetIndex);
+        if (dataset == null) {
+            return null;
+        }
+
+        LegendItem result = null;
+        if (getItemVisible(series, 0)) {
+            String label = getLegendItemLabelGenerator().generateLabel(dataset,
+                    series);
+            String description = label;
+            String toolTipText = null;
+            if (getLegendItemToolTipGenerator() != null) {
+                toolTipText = getLegendItemToolTipGenerator().generateLabel(
+                        dataset, series);
+            }
+            String urlText = null;
+            if (getLegendItemURLGenerator() != null) {
+                urlText = getLegendItemURLGenerator().generateLabel(
+                        dataset, series);
+            }
+            Paint fillPaint = lookupSeriesPaint(series);
+            result = new LegendItem(label, description, toolTipText, urlText, 
+                    getLegendShape(), fillPaint);
+            result.setSeriesKey(dataset.getSeriesKey(series));
+            result.setSeriesIndex(series);
+            result.setDataset(dataset);
+            result.setDatasetIndex(datasetIndex);
+        }
+
+        return result;
+
+    }
+    
+    /**
      * Tests this renderer for equality with an arbitrary object.  This method
      * returns <code>true</code> if and only if:
      * 
@@ -245,6 +344,9 @@ public class XYDotRenderer extends AbstractXYItemRenderer
         if (this.dotHeight != that.dotHeight) {
             return false;
         }
+        if (!ShapeUtilities.equal(this.legendShape, that.legendShape)) {
+            return false;
+        }
         return super.equals(obj);    
     }
     
@@ -257,6 +359,32 @@ public class XYDotRenderer extends AbstractXYItemRenderer
      */
     public Object clone() throws CloneNotSupportedException {
         return super.clone();
+    }
+    
+    /**
+     * Provides serialization support.
+     *
+     * @param stream  the input stream.
+     *
+     * @throws IOException  if there is an I/O error.
+     * @throws ClassNotFoundException  if there is a classpath problem.
+     */
+    private void readObject(ObjectInputStream stream) 
+            throws IOException, ClassNotFoundException {
+        stream.defaultReadObject();
+        this.legendShape = SerialUtilities.readShape(stream);
+    }
+    
+    /**
+     * Provides serialization support.
+     *
+     * @param stream  the output stream.
+     *
+     * @throws IOException  if there is an I/O error.
+     */
+    private void writeObject(ObjectOutputStream stream) throws IOException {
+        stream.defaultWriteObject();
+        SerialUtilities.writeShape(this.legendShape, stream);
     }
 
 }
