@@ -1,3 +1,15 @@
+2007-11-09  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/renderer/xy/XYDotRenderer.java
+	(legendShape): New field,
+	(XYDotRenderer): Initialise new field,
+	(getLegendShape): New method,
+	(setLegendShape): Likewise,
+	(getLegendItem): New method override,
+	(equals): Updated for new field,
+	(readObject): New method,
+	(writeObject): New method.
+	
 2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/plot/XYPlot.java
